--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="image_dimension">100dp</dimen>
+    <dimen name="image_margin">5dp</dimen>
 </resources>
