--- a/app/src/main/res/layout/image_list_row_item.xml
+++ b/app/src/main/res/layout/image_list_row_item.xml
@@ -18,7 +18,8 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                setThumbnailImage="@{thumbnailUrl}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
