--- a/app/src/main/res/layout/fragment_image_detail.xml
+++ b/app/src/main/res/layout/fragment_image_detail.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+                name="mainUrl"
+                type="String" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         <ImageView
+                android:id="@+id/mainImageView"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                setThumbnailImage="@{mainUrl}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
