--- a/app/src/main/res/layout/image_list_row_item.xml
+++ b/app/src/main/res/layout/image_list_row_item.xml
@@ -1,25 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <data>
-        <variable name="thumbnailUrl"
-                  type="String"/>
-    </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                       android:layout_width="@dimen/image_dimension"
-                                                       android:layout_height="@dimen/image_dimension"
-                                                       android:layout_margin="@dimen/image_margin">
+<layout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <ImageView
-                android:id="@+id/thumbnailImageView"
+    <data>
+
+        <variable
+                name="title"
+                type="String" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:id="@+id/titleTextView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                tools:text="Test text"
+                android:text="@{title}"
+                android:padding="16dp"
+                android:textSize="20sp"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:scaleType="centerCrop"
-                setThumbnailImage="@{thumbnailUrl}"/>
+                android:layout_height="wrap_content" />
+
+        <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@android:color/black"
+                android:layout_marginStart="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
