--- a/app/src/main/res/layout/fragment_image_detail.xml
+++ b/app/src/main/res/layout/fragment_image_detail.xml
@@ -4,23 +4,48 @@
     <data>
 
         <variable
-                name="mainUrl"
-                type="String" />
+                name="imageItem"
+                type="com.droid.android.imagedownloader.model.Image" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="16dp">
 
         <ImageView
-                android:id="@+id/mainImageView"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:id="@+id/thumbnailImageView"
+                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:scaleType="fitXY"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                setThumbnailImage="@{imageItem.thumbnailUrl}"
+                android:contentDescription="@null" />
+
+        <TextView
+                android:id="@+id/itemId"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/thumbnailImageView"
+                app:layout_constraintStart_toEndOf="@+id/thumbnailImageView"
                 app:layout_constraintEnd_toEndOf="parent"
-                setThumbnailImage="@{mainUrl}" />
+                android:textSize="20sp"
+                android:text="@{`Id: ` + imageItem.id}"
+                android:layout_marginStart="10dp" />
+
+        <TextView
+                android:id="@+id/itemTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/itemId"
+                app:layout_constraintStart_toEndOf="@+id/thumbnailImageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                android:textSize="20sp"
+                android:text="@{`Title: ` + imageItem.title}"
+                android:layout_marginStart="10dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
